fix(globalStyles): text align left by def for p and a tags

--- a/src/theme/global.scss
+++ b/src/theme/global.scss
@@ -39,3 +39,8 @@ button,
 a {
   cursor: pointer;
 }
+
+p,
+a {
+  text-align: left;
+}
